# Datos-II-Proyecto-1-Servidor

./: CMakeLists.txt  README.md  VariableManager.cpp  VariableManager.h  main.cpp  pruebaskk.cpp
Communication/: HTTPServer.cpp  HTTPServer.h  Socket.cpp  Socket.h
Memory/: MemoryBlock.h  MemoryNode.h  MemoryPool.cpp  MemoryPool.h
MemoryManagement/: VariableManager.cpp
Scope/: Node.h  Scope.cpp  Scope.h
